# mcp-python

./: .gitignore  README.md
memory-server/: config.yml  main.py  pyproject.toml
memory-server/memory/: __init__.py  api.py  model.py  repository.py  settings.py
memory-server/memory/tools/: __init__.py  _common.py  add_observations.py  create_entities.py  create_relations.py  delete_entities.py  delete_observations.py  delete_relations.py  open_nodes.py  read_graph.py  search_nodes.py
